Random Page Upload

--- a/activities.html
+++ b/activities.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sammy Student | Work hard, play hard</title>
+    <title>Ryan Student | Work hard, play hard</title>
     <link rel="stylesheet" href="stylesheets/sammy-style.css">
   </head>
   <body>
     <header>
-      <p><a href="index.html">Sammy Student</a></p>
+      <p><a href="index.html">Ryan Student</a></p>
       <nav>
         <ul>
           <li><a href="about.html">About</a></li>
@@ -23,12 +23,12 @@
       <ul>
         <li>Rowing</li>
         <li>Singing</li>
-        <li>Being in a Fraternity</li>
+        <li>Movies</li>
       </ul>
     </div>
 
     <footer>
-      <p>&copy; 2023 Sammy Student |
+      <p>&copy; 2023 Ryan Student |
         <a href="https://github.com/prof-rossetti/student-site">source code</a>
       </p>
     </footer>
