--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sammy Student | Work hard, play hard</title>
+    <title>Ryan Student | Work hard, play hard</title>
     <link rel="stylesheet" href="stylesheets/sammy-style.css">
   </head>
   <body>
@@ -14,17 +14,18 @@
           <li><a href="activities.html">Activities</a></li>
           <li><a href="experience.html">Experience</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="Random.html">Random</a></li>
         </ul>
       </nav>
     </header>
 
     <div class="page">
-      <h1>Sammy Student</h1>
+      <h1>Ryan Student</h1>
       <p>Welcome to my site.</p>
     </div>
 
     <footer>
-      <p>&copy; 2023 Sammy Student |
+      <p>&copy; 2023 Ryan Student |
         <a href="https://github.com/prof-rossetti/student-site">source code</a>
       </p>
     </footer>
