--- a/about.html
+++ b/about.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sammy Student | Work hard, play hard</title>
+    <title>Ryan Student | Work hard, play hard</title>
     <link rel="stylesheet" href="stylesheets/sammy-style.css">
   </head>
   <body>
     <header>
-      <p><a href="index.html">Sammy Student</a></p>
+      <p><a href="index.html">Ryan Student</a></p>
       <nav>
         <ul>
           <li><a href="about.html">About</a></li>
@@ -21,13 +21,13 @@
     <div class="page">
       <h1>About Me</h1>
       <p>
-        I'm from Connecticut. I'm passionate about computer science. I hope to create my own application software to change the world.
+        I'm from Arizona. I'm passionate about medicine and movies. I hope to create my own application software to change the world.
       </p>
       <img src="images/education_icons_IF-02-512.png" alt="an icon of a student with a mortarboard" />
     </div>
 
     <footer>
-      <p>&copy; 2023 Sammy Student |
+      <p>&copy; 2023 Ryan Student |
         <a href="https://github.com/prof-rossetti/student-site">source code</a>
       </p>
     </footer>
