--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sammy Student | Work hard, play hard</title>
+    <title>Ryan Student | Work hard, play hard</title>
     <link rel="stylesheet" href="stylesheets/sammy-style.css">
   </head>
   <body>
     <header>
-      <p><a href="index.html">Sammy Student</a></p>
+      <p><a href="index.html">Ryan Student</a></p>
       <nav>
         <ul>
           <li><a href="about.html">About</a></li>
@@ -30,7 +30,7 @@
     </div>
 
     <footer>
-      <p>&copy; 2023 Sammy Student |
+      <p>&copy; 2023 Ryan Student |
         <a href="https://github.com/prof-rossetti/student-site">source code</a>
       </p>
     </footer>
