--- a/experience.html
+++ b/experience.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Sammy Student | Work hard, play hard</title>
+    <title>Ryan Student | Work hard, play hard</title>
     <link rel="stylesheet" href="stylesheets/sammy-style.css">
   </head>
   <body>
@@ -29,7 +29,7 @@
     </div>
 
     <footer>
-      <p>&copy; 2023 Sammy Student |
+      <p>&copy; 2023 Ryan Student |
         <a href="https://github.com/prof-rossetti/student-site">source code</a>
       </p>
     </footer>
