--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="utf-8">
     <title>Ryan Student | Work hard, play hard</title>
     <link rel="stylesheet" href="stylesheets/sammy-style.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-93YH9RH1LQ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-93YH9RH1LQ');
+    </script>
   </head>
   <body>
     <header>
