--- a/experience.html
+++ b/experience.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-93YH9RH1LQ"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+    
+          gtag('config', 'G-93YH9RH1LQ');
+        </script>
     <meta charset="utf-8">
     <title>Ryan Student | Work hard, play hard</title>
     <link rel="stylesheet" href="stylesheets/sammy-style.css">
